packages/build/tests/error/fixtures/cancel/plugin.js
export default {
  onPreBuild({
    utils: {
      build: { cancelBuild },
    },
  }) {
    cancelBuild('test')
  },
}
